--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 .C:\Users\totos\Documents\EXEMPLES-NOTES-DOCUMENTATIONS\EXEMPLES-NOTES-DOCUMENTATIONS\binary-code-475664_1280.jpg
+.binary-code-475664_1280.jpg
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
